show postcode only if there is no address

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -37,9 +37,11 @@
   {% if address %}
     {{ address }}
     {% if postcode %}
-      <br>
-      {{ postcode }}
+        <br>
     {% endif %}
+  {% endif %}
+  {% if postcode %}
+    {{ postcode }}  
   {% endif %}
 {% endmacro %}
 
