Updates address controller to use the helper

--- a/views/case_details/edit-client-email-address.njk
+++ b/views/case_details/edit-client-email-address.njk
@@ -25,7 +25,7 @@
       {% endif %}
       <form method="post" action="/cases/{{ caseReference }}/client-details/change/email-address">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-        <input type="hidden" name="existingEmail" value="{{ existingEmail | default(currentEmail) }}">
+        <input type="hidden" name="existingEmail" value="{{ existingEmailAddress | default(currentEmailAddress) }}">
         {{ govukInput({
           label: {
             text: "Client's email address (optional)",
@@ -35,7 +35,7 @@
           id: "emailAddress",
           name: "emailAddress",
           spellcheck: false,
-          value: currentEmail,
+          value: currentEmailAddress,
           errorMessage: emailAddressErrorMessage
         }) }}
         <div class="govuk-button-group">
