--- a/views/case_details/_case-info-partial.njk
+++ b/views/case_details/_case-info-partial.njk
@@ -1,18 +1,18 @@
 {% set statusConfig = {
   "new": {
-    text: "New",
+    text: t.common.status.new,
     classes: "govuk-tag--yellow govuk-!-margin-bottom-2"
   },
   "opened": {
-    text: "Opened",
+    text: t.common.status.opened,
     classes: "govuk-tag--orange govuk-!-margin-bottom-2"
   },
   "accepted": {
-    text: "Accepted",
+    text: t.common.status.accepted,
     classes: "govuk-!-margin-bottom-2"
   },
   "closed": {
-    text: "Closed",
+    text: t.common.status.closed,
     classes: "govuk-tag--grey govuk-!-margin-bottom-2"
   }
 } %}
@@ -24,52 +24,52 @@
   classes: statusConfig[currentStatus].classes
 }) }}
 
-<h2 class="govuk-heading-m govuk-!-margin-bottom-1">Date received: <span class="govuk-body-l">{{ client.dateReceived | formatDate }}</span></h2>
-<h2 class="govuk-heading-m govuk-!-margin-bottom-7">LAA reference: <span class="govuk-body-l">{{ client.laaReference or "Not provided" }}</span></h2>
+<h2 class="govuk-heading-m govuk-!-margin-bottom-1">{{ t.pages.caseDetails.dateReceived }} <span class="govuk-body-l">{{ client.dateReceived | formatDate }}</span></h2>
+<h2 class="govuk-heading-m govuk-!-margin-bottom-7">{{ t.pages.caseDetails.laaReference }} <span class="govuk-body-l">{{ client.laaReference or t.pages.caseDetails.notProvided }}</span></h2>
 
 <div class="govuk-button-group">
   {% if currentStatus == "new" or currentStatus == "opened" %}
     {{ govukButton({
-      text: "Accept case"
+      text: t.pages.caseDetails.buttons.acceptCase
     }) }}
     {{ govukButton({
-      text: "Reject case",
+      text: t.pages.caseDetails.buttons.rejectCase,
       classes: "govuk-button--secondary"
     }) }}
     {{ govukButton({
-      text: "Split case",
+      text: t.pages.caseDetails.buttons.splitCase,
       classes: "govuk-button--secondary"
     }) }}
     {{ govukButton({
-      text: "Leave feedback",
+      text: t.pages.caseDetails.buttons.leaveFeedback,
       classes: "govuk-button--secondary"
     }) }}
   {% elif currentStatus == "accepted" %}
     {{ govukButton({
-      text: "Generate legal help form"
+      text: t.pages.caseDetails.buttons.generateLegalHelpForm
     }) }}
     {{ govukButton({
-      text: "Reject case",
+      text: t.pages.caseDetails.buttons.rejectCase,
       classes: "govuk-button--secondary"
     }) }}
     {{ govukButton({
-      text: "Split case",
+      text: t.pages.caseDetails.buttons.splitCase,
       classes: "govuk-button--secondary"
     }) }}
     {{ govukButton({
-      text: "Close case",
+      text: t.pages.caseDetails.buttons.closeCase,
       classes: "govuk-button--secondary"
     }) }}
     {{ govukButton({
-      text: "Leave feedback",
+      text: t.pages.caseDetails.buttons.leaveFeedback,
       classes: "govuk-button--secondary"
     }) }}
   {% elif currentStatus == "closed" %}
     {{ govukButton({
-      text: "Reopen case"
+      text: t.pages.caseDetails.buttons.reopenCase
     }) }}
     {{ govukButton({
-      text: "Generate legal help form",
+      text: t.pages.caseDetails.buttons.generateLegalHelpForm,
       classes: "govuk-button--secondary"
     }) }}
   {% endif %}
