--- a/views/case_details/edit-client-name.njk
+++ b/views/case_details/edit-client-name.njk
@@ -5,12 +5,14 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "components/errorSummaryComponent.njk" import errorSummary %}
 
+{% block pageTitle %}{{ t.forms.clientDetails.name.pageTitle | replace('{caseReference}', caseReference) | replace('{serviceName}', config.SERVICE_NAME) }}{% endblock %}
+
 
 {% set backLinkHref = "/cases/" + caseReference + "/client-details" %}
 
 {% block backLink %}
   {{ govukBackLink({
-      text: "Back",
+      text: t.common.back,
       href: backLinkHref,
       classes: "govuk-!-margin-bottom-0"
     }) }}
@@ -28,7 +30,7 @@
         <input type="hidden" name="existingFullName" value="{{ existingFullName | default(currentName) }}">
         {{ govukInput({
           label: {
-            text: "Client name",
+            text: t.forms.clientDetails.name.title,
             classes: "govuk-label--l",
             isPageHeading: true
           },
@@ -39,9 +41,9 @@
         }) }}
         <div class="govuk-button-group">
           {{ govukButton({
-            text: "Save"
+            text: t.common.save
           }) }}
-          <a class="govuk-link" href="{{ backLinkHref }}">Cancel</a>
+          <a class="govuk-link" href="{{ backLinkHref }}">{{ t.common.cancel }}</a>
         </div>
       </form>
     </div>
