--- a/views/main/index.njk
+++ b/views/main/index.njk
@@ -4,7 +4,7 @@
     {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
 
     {{ govukWarningText({
-        text: "MCC is under construction. Please stay tuned.",
-        iconFallbackText: "Warning"
+        text: t.pages.home.underConstruction,
+        iconFallbackText: t.common.warning
     }) }}
 {% endblock %}
