--- a/views/search/index.njk
+++ b/views/search/index.njk
@@ -15,22 +15,22 @@
     if error.inputErrors.searchKeyword %}
   {% endif %}
 
-  <h1 class="govuk-heading-xl">Search for a case</h1>
-  <p>Enter case details to search for a case </p>
+  <h1 class="govuk-heading-xl">{{ t.pages.search.heading }}</h1>
+  <p>{{ t.pages.search.intro }}</p>
 
 
   <div class="moj-filter__selected">
     <div class="moj-filter__heading-title">
-      <h2 class="govuk-heading-m">Case details</h2>
+      <h2 class="govuk-heading-m">{{ t.pages.search.caseDetailsHeading }}</h2>
     </div>
     <div id="search-hint" class="govuk-hint">
-      <p class="govuk-body">You can search by:</p>
+      <p class="govuk-body">{{ t.pages.search.searchHint.intro }}</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>case ID (eg. EH-1234-2925)</li>
-        <li>phone number</li>
-        <li>name</li>
-        <li>postcode</li>
-        <li>address</li>
+        <li>{{ t.pages.search.searchHint.items.caseId }}</li>
+        <li>{{ t.pages.search.searchHint.items.phoneNumber }}</li>
+        <li>{{ t.pages.search.searchHint.items.name }}</li>
+        <li>{{ t.pages.search.searchHint.items.postcode }}</li>
+        <li>{{ t.pages.search.searchHint.items.address }}</li>
       </ul>
     </div>
     <form action="/search" method="POST" class="govuk-form">
@@ -44,7 +44,7 @@
       value: searchKeyword,
       errorMessage: searchKeywordErrorMessage,
       label: {
-        text: "Search by case ID, client name, phone number, postcode or address",
+        text: t.pages.search.inputLabel,
         classes: "govuk-visually-hidden"
       }
     }) }}
@@ -53,33 +53,33 @@
       id: "statusSelect",
       name: "statusSelect",
       label: {
-        text: "Status",
+        text: t.pages.search.statusLabel,
         classes: "govuk-label--m"
       },
       items: [
         {
           value: "all",
-          text: "Show all",
+          text: t.pages.search.statusOptions.all,
           selected: statusSelect === "all"
         },
         {
           value: "new",
-          text: "New",
+          text: t.common.status.new,
           selected: statusSelect === "new"
         },
         {
           value: "opened",
-          text: "Opened",
+          text: t.common.status.opened,
           selected: statusSelect === "opened"
         },
         {
           value: "accepted",
-          text: "Accepted",
+          text: t.common.status.accepted,
           selected: statusSelect === "accepted"
         },
         {
           value: "closed",
-          text: "Closed",
+          text: t.common.status.closed,
           selected: statusSelect === "closed"
         }
       ]
@@ -87,10 +87,10 @@
 
       <div class="govuk-button-group">
         {{ govukButton({
-        text: "Search"
+        text: t.pages.search.searchButtonText
       }) }}
 
-        <a class="govuk-link" href="/search/clear">Clear all</a>
+        <a class="govuk-link" href="/search/clear">{{ t.pages.search.clearLink }}</a>
       </div>
     </form>
   </div>
@@ -104,12 +104,12 @@
           id: "search-results-table",
           data: searchResults,
           columns: [
-            { key: "fullName", text: "Name", link: "/cases/{{caseReference}}/client-details" },
-            { key: "caseReference", text: "Case ID" },
-            { key: "phoneNumber", text: "Phone number" },
-            { key: "dateOfBirth", text: "Date of birth" },
-            { key: "caseStatus", text: "Status" },
-            { key: "lastModified", text: "Last modified", sortable: true, classes: "govuk-table__header--numeric", cellClasses: "govuk-table__cell--numeric" }
+            { key: "fullName", text: t.components.table.columns.name, link: "/cases/{{caseReference}}/client-details" },
+            { key: "caseReference", text: t.components.table.columns.caseId },
+            { key: "phoneNumber", text: t.components.table.columns.phoneNumber },
+            { key: "dateOfBirth", text: t.components.table.columns.dateOfBirth },
+            { key: "caseStatus", text: t.components.table.columns.status },
+            { key: "lastModified", text: t.components.table.columns.lastModified, sortable: true, classes: "govuk-table__header--numeric", cellClasses: "govuk-table__cell--numeric" }
           ],
           sortBy: sortBy or "lastModified",
           sortOrder: sortOrder or "desc",
@@ -124,8 +124,8 @@
           }) }}
         {% endif %}
       {% else %}
-        <h2 class="govuk-heading-m">No results found</h2>
-        <p class="govuk-body">There are no results that match the search criteria</p>
+        <h2 class="govuk-heading-m">{{ t.pages.search.noResults.heading }}</h2>
+        <p class="govuk-body">{{ t.pages.search.noResults.body }}</p>
       {% endif %}
     </div>
   {% endif %}
